--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "through2": "^2.0.0"
   },
   "devDependencies": {
+    "babel": "^5.6.14",
+    "babel-runtime": "^5.6.15",
     "mocha": "^2.2.5",
+    "mocha-babel": "^3.0.0",
     "should": "^6.0.3"
   }
 }
