--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A stream-oriented parser that emits GEDCOM X-compliant data from legacy GEDCOM files",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --compilers js:mocha-babel"
+    "test": "mocha --compilers js:babel-core/register"
   },
   "repository": {
     "type": "git",
@@ -16,22 +16,23 @@
     "genealogy"
   ],
   "author": "Michael Dietz",
-  "license": "GPL",
+  "license": "GPL-2.0",
   "bugs": {
     "url": "https://github.com/drenglish/node-gedcom/issues"
   },
   "homepage": "https://github.com/drenglish/node-gedcom",
   "dependencies": {
+    "baconjs": "^0.7.88",
     "byline": "^4.2.1",
+    "highland": "^2.10.0",
     "through2": "^2.0.0"
   },
   "devDependencies": {
-    "babel": "^5.6.14",
-    "babel-runtime": "^5.6.15",
+    "babel": "^6.5.2",
+    "babel-core": "^6.18.0",
     "chai": "^3.2.0",
     "chai-as-promised": "^5.1.0",
-    "mocha": "^2.2.5",
-    "mocha-babel": "^3.0.0",
+    "mocha": "^2.5.3",
     "sinon": "^1.15.4",
     "sinon-chai": "^2.8.0"
   }
